--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ DB_USERNAME=postgres
 DB_PASSWORD=123
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=array
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
